--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,10 +1,15 @@
 <header class="d-flex flex-row align-items-center justify-content-between p-3 px-4 mb-3 
     bg-white border-bottom fixed-top shadow-sm">
-    <img src="/assets/images/logo.png" alt="logo" style="max-height: 70px;">
+    <img src="/assets/images/logo.png" alt="logo" class="logo" style="max-height: 90px; width: 200px" routerLink="/">
     <nav class="my-2 text-uppercase fs-4">
-        <a class="p-2 py-2 link-body-emphasis text-decoration-none" href="#">Home</a>
-        <a class="p-2 py-2 link-body-emphasis text-decoration-none" href="#">Shop</a>
-        <a class="p-2 py-2 link-body-emphasis text-decoration-none" href="#">Contact</a>
+        <a class="p-2" 
+            routerLink="/" 
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact: true}">
+            Home
+        </a>
+        <a class="p-2" routerLink="/shop" routerLinkActive="active">Shop</a>
+        <a class="p-2" routerLink="/contact" routerLinkActive="active">Contact</a>
     </nav>
     <div class="d-flex align-items-center">
         <a class="position-relative">
@@ -14,4 +19,5 @@
         <a href="" class ="btn btn-outline-secondary me-2">Login</a>
         <a href="" class ="btn btn-outline-secondary me-3">Sign up</a>
     </div>
+
 </header>
