--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -2,14 +2,14 @@
     <img src="{{product.pictureUrl}}" alt="{{product.name}}" class="img-fluid">
     <div class="card-body d-flex flex-column">
         <a href="" class="text-decoration-none">
-            <h6 class="text-uppercase">
+            <h6 class="text-uppercase" style="color: rgb(35, 94, 213);">
                 {{product.name}}
             </h6>
         </a>
         <span class="mb-2">{{product.price | currency}}</span>
         <div class="btn-group mt-auto">
             <button class="btn btn-outline-secondary fa fa-shopping-cart me-2"></button>
-            <button class="btn btn-outline-secondary">View</button>
+            <button routerLink="/shop/{{product.id}}" class="btn btn-outline-secondary">View</button>
         </div>
     </div>
   </div>
