--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,19 @@
-<p>home works!</p>
+<carousel [isAnimated]="true">
+    <slide>
+        <img src="assets/images/home1.jpg" alt="slide" style="display: block; width: 100%;">
+    </slide>
+    <slide>
+        <img src="assets/images/home2.jpg" alt="slide" style="display: block; width: 100%;">
+    </slide>
+    <slide>
+        <img src="assets/images/home3.jpg" alt="slide" style="display: block; width: 100%;">
+    </slide>
+    <slide>
+        <img src="assets/images/home4.jpg" alt="slide" style="display: block; width: 100%;">
+    </slide>
+</carousel>
+<section class="featured">
+    <div class="d-flex justify-content-center pt-4">
+        <h1>Welcome to LC Motorbike!</h1>
+    </div>
+</section>
